--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 		</div>
 
 		<div class="end-text">
-			<p>Copyright ©2022 All rights reserved | Made with ❤️ by Uttam Gohil</p>
+			<p>Copyright ©2022 All rights reserved | Made with ❤️ by Het Patel</p>
 		</div>
 	</section>
 
